eagledir = $(pkgdatadir)/eagle
dist_eagle_DATA = README_eagle.txt

hairpinfilterdir = $(eagledir)/hairpinfilter
dist_hairpinfilter_DATA = \
 hairpinfilter/hairpinfilter_board.png \
 hairpinfilter/hairpinfilter.HYP \
 hairpinfilter/README.txt \
 hairpinfilter/hairpinfilter.pdf \
 hairpinfilter/hairpinfilter.sch \
 hairpinfilter/demo_hairpin.m \
 hairpinfilter/hairpinfilter.brd \
 hairpinfilter/hairpinfilter_simulation.png


tutorialdir = $(eagledir)/tutorial
dist_tutorial_DATA = \
 tutorial/msl.brd \
 tutorial/GetUnits.m \
 tutorial/msl.lbr \
 tutorial/README.txt \
 tutorial/msl.patch \
 tutorial/msl.pdf \
 tutorial/msl.sch \
 tutorial/sparam.png \
 tutorial/msl.HYP \
 tutorial/GetEpsilon.m \
 tutorial/tutorial_hyp2mat.m

notchfilterdir = $(eagledir)/notchfilter
dist_notchfilter_DATA = \
 notchfilter/demo_notch.m \
 notchfilter/notchfilter.pdf \
 notchfilter/notchfilter.sch \
 notchfilter/README.txt \
 notchfilter/notchfilter_simulation.png \
 notchfilter/notchfilter_board.png \
 notchfilter/notchfilter.brd \
 notchfilter/notchfilter.HYP

